--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,3 +1,4 @@
+
 body
 {
   font-family: Tahoma, sans-serif;
@@ -10,4 +11,8 @@ header
   font-family: Courier, serif;
   text-align: center;
   color: orange;  
+}
+.image
+{
+  width: 100px;
 }
