--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -161,3 +161,30 @@ color: #fdc306;
 }
 
 /** end of calculator */
+
+.container{
+  width:540px;
+  margin:40px auto;
+  overflow:auto;
+}
+
+.slider-inner{
+  width:500px;
+  height:300px;
+  position:relative;
+  overflow:hidden;
+  float:left;
+  padding:3px;
+  border:#0679fd solid 1px;
+
+}
+
+.slider-inner img{
+  display:none;
+  width:500px;
+  height:300px;
+}
+
+.slider-inner img.active{
+  display:inline-block;
+}
